--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -18,10 +18,21 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <link rel="shortcut icon" href="{{ site.baseurl }}static/img/favicon.ico">
+    <!--<link rel="shortcut icon" href="{{ site.baseurl }}static/img/favicon.ico">-->
     <!-- <link rel="apple-touch-icon" href="static/img/me-icon-57.png"> -->
     <!-- <link rel="apple-touch-icon" sizes="72x72" href="static/img/me-icon-72.png"> -->
     <!-- <link rel="apple-touch-icon" sizes="114x114" href="static/img/me-icon-114.png"> -->
+
+
+<link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}static/icons/apple-touch-icon.png">
+<link rel="icon" type="image/png" href="{{ site.baseurl }}static/icons/favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="{{ site.baseurl }}static/icons/favicon-16x16.png" sizes="16x16">
+<link rel="manifest" href="{{ site.baseurl }}static/icons/manifest.json">
+<link rel="mask-icon" href="{{ site.baseurl }}static/icons/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="{{ site.baseurl }}static/icons/favicon.ico">
+<meta name="msapplication-config" content="{{ site.baseurl }}static/icons/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
+
 </head>
 
 <body>
