Spelling mistakes and removed footer so I can print

--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -28,7 +28,7 @@
             <h1>Principal Software Engineer</h1>
             <span><address>EMCC Software - Manchester, UK</address><time>2002 to 2009</time></span>
         </header>
-        <p>During my time at EMCC I progressed from Graduate Software Engineer to Prinical Software Engineer. 
+        <p>During my time at EMCC I progressed from Graduate Software Engineer to Principal Software Engineer. 
         As well as heading up several in-house projects I enjoyed extended on-site placements at Symbian and Sony Ericsson.</p>
         <br/><h5>Accomplishments</h5>
         <ul>
@@ -45,7 +45,7 @@
     <article>
         <header>
             <h1>Software Engineer</h1>
-            <span><address>NCC Glabal - Manchester, UK</address><time>2000 to 2002</time></span>
+            <span><address>NCC Global - Manchester, UK</address><time>2000 to 2002</time></span>
         </header>
         <p>After leaving university I worked at the former National Computing Centre in Manchester. 
         My duties involved Windows and UNIX development in C and TCL/TK, and working on customer sites to integrate the telecommunications testing software that we produced.</p>
