--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -63,8 +63,8 @@
             {{ content }}
 
             <footer class="thirteen columns">
-                <p>© All rights reserved. Powered by <a href="http://jekyllrb.com/">Jekyll</a> and
-                    <a href="https://www.github.com/biomadeira/vitae">vitae</a> with ♥</p>
+                <!--<p>© All rights reserved. Powered by <a href="http://jekyllrb.com/">Jekyll</a> and
+                    <a href="https://www.github.com/biomadeira/vitae">vitae</a> with ♥</p>-->
             </footer>
         </div>
     </div>
