Quick updates to employment history

--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -5,7 +5,7 @@
             <h1>Head of Engineering</h1>
             <span><address>EA Chillingo - Macclesfield, UK</address><time>2009 to Present</time></span>
         </header>
-        <p>As Chillingo’s first employee I helped it grow to become the one of the most successful smartphone game publishers in the world, producing titles such as Angry Birds and Cut the Rope across all mobile platforms. 
+        <p>Chillingo is an independent publisher of mobile games, now part of Electronic Arts. As Chillingo’s first employee I helped it grow to become the one of the most successful smartphone game publishers in the world, producing titles such as Angry Birds and Cut the Rope across all mobile platforms. 
             I architected the Crystal social gaming platform, which was key to Chillingo's acquisition by Electronic Arts in 2010 and developed entirely in-house.
             As our external developers increased in size and their back-end systems became complex I established a Due Diligence process to provide technical oversight and certification.</p>
         <br/><h5>Accomplishments</h5>
@@ -17,7 +17,7 @@
         <h5>Responsibilities</h5>
         <ul>
             <li>Leadership of Chillingo's in-house development team producing our own cross-promotion, social and compliance systems</li>
-            <li>Ownership of Chillingo's technical roadmap and strategy for both internal technologies partner solutions</li>
+            <li>Ownership of Chillingo's technical roadmap and strategy for both internal technologies and partner solutions</li>
             <li>Technical oversight and consultancy for all external suppliers to ensure scalability, security and reliability</li>
             <li>Legal support for all projects, including a legal compliance SDK and technical investigations for litigation cases</li>
         </ul>
