Quick updates to the Yogassential section

--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -6,9 +6,9 @@
             <h1>Chief Technical Officer</h1>
             <span><address>Yogassential - Manchester, UK</address><time>2017 to Present</time></span>
         </header>
-        <p>Yogassential provides private yoga lessons to homes around the UK. Driven by a consumer-facing iOS app and a Ruby on Rails back-end, the service is delivering on its expectations and growing its user base. The app is improving on its purchase
-            flows through incremental updates, A/B testing and detailed user analysis. My initial consultancy phase took the bug-ridden, unfinished and over-budget product towards store readiness. Since then I have taken on the CTO role to oversee the
-            ongoing development and management of the project and transition away from the original developer.
+        <p>Yogassential provides private yoga lessons to homes around the UK. Driven by a customer-facing iOS app and a Ruby on Rails back-end, the service is delivering on its expectations and building its user base. The app is improving on its purchase
+            flows through incremental updates, A/B testing and detailed user analysis. My initial consultancy phase took the bug-ridden, unfinished and over-budget product to store readiness. Since then I have taken on the CTO role to oversee the ongoing
+            development and management of the project and transition away from the original developer.
         </p>
         <br/>
         <h5>Accomplishments</h5>
