Added Clothes Doctor

--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -4,6 +4,27 @@
     <article>
         <header>
             <h1>Chief Technical Officer</h1>
+            <span><address>Clothes Doctor - London, UK</address><time>2017 to Present</time></span>
+        </header>
+        <p>Clothes Doctor is an online clothes repairs and alterations service, serving the whole of the UK. I came on board to take the over-budget and poor quality website over the finish line. 
+            After transitioning away from the original developer we have moved to an offshore team for the front-end website and developed a backend order management system in-house.
+        </p>
+        <br/>
+        <h5>Accomplishments</h5>
+        <ul>
+            <li>Delivered a performant customer-facing service through effective supplier management and a structured approach to quality</li>
+            <li>Developed an effective order management system to streamline processes and provide a quality service to customers</li>
+        </ul>
+        <h5>Responsibilities</h5>
+        <ul>
+            <li>Ongoing development and maintenance of the order management system</li>
+            <li>Management of the Indian development team working on the customer-facing website</li>
+        </ul>
+    </article>
+
+    <article>
+        <header>
+            <h1>Chief Technical Officer</h1>
             <span><address>Yogassential - Manchester, UK</address><time>2017 to Present</time></span>
         </header>
         <p>Yogassential provides private yoga lessons to homes around the UK. Driven by a customer-facing iOS app and a Ruby on Rails back-end, the service is delivering on its expectations and building its user base. My initial consultancy phase took the
