--- a/_includes/summary-yank.html
+++ b/_includes/summary-yank.html
@@ -19,7 +19,7 @@
             <ul>
                 <li>Excels at leading the development of engaging, scalable products</li>
                 <li>Drives customer-focused, iterative development aligned with business goals and supported by data</li>
-                <li>Engages with internal and external teams to ensure products are fit for purpose and engineered for success</li>
+                <li>Engages with internal and external teams to ensure products are fit for market and engineered for success</li>
             </ul>
         </p>
 
