--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -8,7 +8,7 @@
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
             &nbsp;&nbsp;<em>Objective-C, Swift, iOS &amp; related tech</em>
         <p>
-            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
             &nbsp;&nbsp;<em>Java, Android &amp; related tech</em>
         </p>
         <p>
