--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -42,7 +42,7 @@
         </p>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
-            &nbsp;&nbsp;<em>DevOps</em> (Team City, Jenkins, Kubernetes, Elastic Beanstalk)
+            &nbsp;&nbsp;<em>DevOps</em> (Team City, Jenkins, Kubernetes, Elastic Beanstalk, CircleCI)
         </p>
     </article>
 </section>
