--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -3,6 +3,25 @@
 
     <article>
         <header>
+            <h1>Sole iOS Developer</h1>
+            <span><address><a href="https://www.wallstreetenglish.com/" target="_blank">Wall Street English</a> - London, UK</address><time>2018 to Present</time></span>
+        </header>
+        <p>Wall Street English are one of the largest providers of English language education for adults Worldwide, with 450 centres in 28 countries. The app provides interactive learning and social features for WSE students, helping them to learn English with the help of their fellow students.
+        </p>
+        <br/>
+        <h5>Accomplishments</h5>
+        <ul>
+            <li>Ongoing contract, on-track to deliver a modern and engaging app in April</li>
+        </ul>
+        <h5>Responsibilities</h5>
+        <ul>
+            <li>Sole developer of the iOS application</li>
+            <li>Liasing with the customer, designers and back-end engineers to align on functionality</li>
+        </ul>
+    </article>
+
+    <article>
+        <header>
             <h1>Chief Technical Officer</h1>
             <span><address><a href="https://www.clothes-doctor.com/" target="_blank">Clothes Doctor</a> - London, UK</address><time>2017 to Present</time></span>
         </header>
