--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -16,7 +16,7 @@
         <h5>Responsibilities</h5>
         <ul>
             <li>Sole developer of the iOS application</li>
-            <li>Liasing with the customer, designers and back-end engineers to align on functionality</li>
+            <li>Liasing with the customer, designers and back-end engineers to align on requirements and functionality</li>
         </ul>
     </article>
 
