--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -6,12 +6,12 @@
             <h1>Sole iOS Developer</h1>
             <span><address><a href="https://www.wallstreetenglish.com/" target="_blank">Wall Street English</a> - London, UK</address><time>2018 to Present</time></span>
         </header>
-        <p>Wall Street English are one of the largest providers of English language education for adults Worldwide, with 450 centres in 28 countries. The app provides interactive learning and social features for WSE students, helping them to learn English with the help of their fellow students.
+        <p>Wall Street English are one of the largest providers of English language education for adults Worldwide, with 450 teaching centres in 28 countries. The app provides interactive learning and social features for WSE students, helping them to learn English with the help of their fellow students.
         </p>
         <br/>
         <h5>Accomplishments</h5>
         <ul>
-            <li>Ongoing contract, on-track to deliver a modern and engaging app in April</li>
+            <li>Delivered a complete re-write of the existing application on-time and within budget</li>
         </ul>
         <h5>Responsibilities</h5>
         <ul>
