Added more accurate dates to the CV

--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -4,7 +4,7 @@
     <article>
         <header>
             <h1>Sole iOS Developer</h1>
-            <span><address><a href="https://www.wallstreetenglish.com/" target="_blank">Wall Street English</a> - London, UK</address><time>2018 to Present</time></span>
+            <span><address><a href="https://www.wallstreetenglish.com/" target="_blank">Wall Street English</a> - London, UK</address><time>March 2018 to June 2018</time></span>
         </header>
         <p>Wall Street English are one of the largest providers of English language education for adults Worldwide, with 450 teaching centres in 28 countries. The app provides interactive learning and social features for WSE students, helping them to learn English with the help of their fellow students.
         </p>
@@ -23,7 +23,7 @@
     <article>
         <header>
             <h1>Chief Technical Officer</h1>
-            <span><address><a href="https://www.clothes-doctor.com/" target="_blank">Clothes Doctor</a> - London, UK</address><time>2017 to Present</time></span>
+            <span><address><a href="https://www.clothes-doctor.com/" target="_blank">Clothes Doctor</a> - London, UK</address><time>August 2017 to June 2018</time></span>
         </header>
         <p>Clothes Doctor is an online clothes repairs and alterations service, serving the whole of the UK. I came on board to take the over-budget and poor quality website over the finish line. 
             After transitioning away from the original developer we have moved to an offshore team for the front-end website and developed a backend order management system in-house.
@@ -45,7 +45,7 @@
     <article>
         <header>
             <h1>Technical Consultant</h1>
-            <span><address><a href="http://friendrequest.co.uk/" target="_blank">Friend Request</a> - London, UK</address><time>2017 to Present</time></span>
+            <span><address><a href="http://friendrequest.co.uk/" target="_blank">Friend Request</a> - London, UK</address><time>September 2017 to April 2018</time></span>
         </header>
         <p>Friend Request is an iOS app connecting active users with others that match their interests. I initially worked with Friend Request to design and implement their Google Cloud infrastructure and deployment processes.
             More recently I head the development of the iOS app, managing two London-based developers and working with the founders to define features and manage workload.
@@ -67,7 +67,7 @@
     <article>
         <header>
             <h1>Chief Technical Officer</h1>
-            <span><address><a href="http://yogassential.com/" target="_blank">Yogassential</a> - Manchester, UK</address><time>2017 to Present</time></span>
+            <span><address><a href="http://yogassential.com/" target="_blank">Yogassential</a> - Manchester, UK</address><time>January 2017 to April 2018</time></span>
         </header>
         <p>Yogassential provides private yoga lessons to homes around the UK. Driven by a customer-facing iOS app and a Ruby on Rails back-end, the service is delivering on its expectations and building its user base. My initial consultancy phase took the
             bug-ridden, unfinished and over-budget product to store readiness. Since then I have taken on the CTO role to oversee the ongoing development of the project, transition away from the original developer and drive uptake.
@@ -90,7 +90,7 @@
     <article>
         <header>
             <h1>Head of Engineering</h1>
-            <span><address><a href="https://www.ea.com/en-gb" target="_blank">EA Chillingo</a> - Macclesfield, UK</address><time>2009 to Present</time></span>
+            <span><address><a href="https://www.ea.com/en-gb" target="_blank">EA Chillingo</a> - Macclesfield, UK</address><time>2009 to 2017</time></span>
         </header>
         <p>Chillingo is an independent publisher of mobile games, now part of Electronic Arts. As Chillingo’s first employee I helped it grow to become the one of the most successful smartphone game publishers in the world, producing titles such as Angry
             Birds and Cut the Rope across all mobile platforms. I architected the Crystal social gaming platform, which was key to Chillingo's acquisition by Electronic Arts in 2010 and developed entirely in-house. As our external developers increased
