--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -7,6 +7,7 @@
             <span><address><a href="https://www.wallstreetenglish.com/" target="_blank">Wall Street English</a> - London, UK</address><time>March 2018 to June 2018</time></span>
         </header>
         <p>Wall Street English are one of the largest providers of English language education for adults Worldwide, with 450 teaching centres in 28 countries. The app provides interactive learning and social features for WSE students, helping them to learn English with the help of their fellow students.
+            After working with the designers on a complete re-design of the app I re-implemented almost all of the app using Swift 4.1 and an MVVM architecture.
         </p>
         <br/>
         <h5>Accomplishments</h5>
@@ -22,33 +23,33 @@
 
     <article>
         <header>
-            <h1>Chief Technical Officer</h1>
+            <h1>Lead Engineer and CTO</h1>
             <span><address><a href="https://www.clothes-doctor.com/" target="_blank">Clothes Doctor</a> - London, UK</address><time>August 2017 to June 2018</time></span>
         </header>
-        <p>Clothes Doctor is an online clothes repairs and alterations service, serving the whole of the UK. I came on board to take the over-budget and poor quality website over the finish line. 
-            After transitioning away from the original developer we have moved to an offshore team for the front-end website and developed a backend order management system in-house.
+        <p>Clothes Doctor is an online clothes repairs and alterations service, serving the whole of the UK. I came on board to take the over-budget and poor quality website over the finish line, as well as to implement the back-office order management system. 
         </p>
         <br/>
         <h5>Accomplishments</h5>
         <ul>
-            <li>Delivered a performant customer-facing service through effective supplier management and a structured approach to quality</li>
             <li>Developed an effective order management system to streamline processes and provide a quality service to customers</li>
+            <li>Delivered a performant customer-facing service through effective supplier management and a structured approach to quality</li>
+            <li>Implemented a comprehensive cloud deployment driven by CI, which streamlines the processes required to support external developers</li>
         </ul>
         <h5>Responsibilities</h5>
         <ul>
-            <li>Ongoing development and maintenance of the order management system</li>
+            <li>Development and maintenance of the order management system</li>
             <li>Management of the Indian development team working on the customer-facing website</li>
-            <li>Development and management of cloud infrastructure</li>
+            <li>Development and management of cloud infrastructure and continuous integration</li>
         </ul>
     </article>
 
     <article>
         <header>
-            <h1>Technical Consultant</h1>
+            <h1>Lead iOS Developer</h1>
             <span><address><a href="http://friendrequest.co.uk/" target="_blank">Friend Request</a> - London, UK</address><time>September 2017 to April 2018</time></span>
         </header>
-        <p>Friend Request is an iOS app connecting active users with others that match their interests. I initially worked with Friend Request to design and implement their Google Cloud infrastructure and deployment processes.
-            More recently I head the development of the iOS app, managing two London-based developers and working with the founders to define features and manage workload.
+        <p>Friend Request is an iOS app connecting outgoing users with others that match their interests. I initially worked with Friend Request to design and implement their Google Cloud infrastructure and deployment processes.
+            Later I headed the development of the iOS app, managing two London-based developers and working with the founders to define features and manage workload.
         </p>
         <br/>
         <h5>Accomplishments</h5>
@@ -66,23 +67,23 @@
 
     <article>
         <header>
-            <h1>Chief Technical Officer</h1>
+            <h1>Lead Engineer and CTO</h1>
             <span><address><a href="http://yogassential.com/" target="_blank">Yogassential</a> - Manchester, UK</address><time>January 2017 to April 2018</time></span>
         </header>
         <p>Yogassential provides private yoga lessons to homes around the UK. Driven by a customer-facing iOS app and a Ruby on Rails back-end, the service is delivering on its expectations and building its user base. My initial consultancy phase took the
-            bug-ridden, unfinished and over-budget product to store readiness. Since then I have taken on the CTO role to oversee the ongoing development of the project, transition away from the original developer and drive uptake.
+            bug-ridden, unfinished and over-budget product to store readiness. After this I took on a CTO role to oversee the ongoing development of the project, transition away from the original developer and drive uptake.
         </p>
         <br/>
         <h5>Accomplishments</h5>
         <ul>
-            <li>An effective consultancy phase, delivering a finished product and streamlined development process at no cost to the customer</li>
+            <li>An effective consultancy phase, delivering a finished product and streamlined development process</li>
             <li>Spearheaded ongoing efforts to franchise the system into new markets</li>
         </ul>
         <h5>Responsibilities</h5>
         <ul>
-            <li>Ongoing development and maintenance of the iOS and Android consumer apps</li>
+            <li>Development and maintenance of the iOS and Android consumer apps</li>
             <li>Product management and marketing consultancy for the live service</li>
-            <li>Management of the outsourced development team that work on the back-end and dashboard functionality</li>
+            <li>Management of the outsourced development team that worked on the back-end and dashboard functionality</li>
             <li>Business development, pushing the system into new markets through a licensing model</li>
         </ul>
     </article>
