--- a/_includes/summary.html
+++ b/_includes/summary.html
@@ -2,10 +2,10 @@
     <h1>Introduction</h1>
     <article>
         <p>
-            An experienced engineering manager, architect and consultant; pleased to have had the opportunity to develop my skills in the ever-changing mobile and gaming environments.
+            An experienced software engineer, architect and manager; pleased to have had the opportunity to develop my skills in the ever-changing mobile and gaming ecosystems.
         </p><br/>
         <p>
-            Proven track record of building and leading teams to construct innovative and scalable products. Adept at solving complex problems and working with internal and external teams to bring successful products to market.
+            A proven track record of building innovative and scalable products. Adept at solving complex problems and working with internal and external teams to bring engaging experiences to market.
         </p>
     </article>
 
@@ -17,9 +17,10 @@
 
         <p>
             <ul>
-                <li>Excels at leading the development of engaging, scalable products</li>
                 <li>Drives customer-focused, iterative development aligned with business goals and supported by data</li>
-                <li>Engages with internal and external teams to ensure products are fit for purpose and engineered for success</li>
+                <li>Delivers engaging experiences on-time and on-budget</li>
+                <li>Collaborates with internal and external teams to ensure products are fit for purpose and engineered for success</li>
+                <li>Constantly keeps up-to-date with new technologies, tools and architectures</li>
             </ul>
         </p>
 
