--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -54,7 +54,7 @@
         <h5>Accomplishments</h5>
         <ul>
             <li>Deployed a complex Python-based API backend across various Google Cloud services and implemented a comprehensive Continuous Integration setup</li>
-            <li>Developed various application features such as chat and image handling on Firebase to reduce server load and pressure on develpment resources</li>
+            <li>Developed various application features such as chat and image handling on Firebase to reduce server load and pressure on development resources</li>
         </ul>
         <h5>Responsibilities</h5>
         <ul>
