--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -4,6 +4,45 @@
     <article>
         <header>
             <h1>Sole iOS Developer</h1>
+            <span><address><a href="https://www.levistrauss.com/" target="_blank">Levi Strauss - Digital Showroom</a> - UK (Remote)</address><time>April 2019 to Present</time></span>
+        </header>
+        <p>Levi Strauss & Co. is one of the world’s largest apparel companies and a global leader in jeans. Though a huge brand in their own right, the majority of their business is actually B2B.
+            I implemented an internal app used by Levi's B2B sales team to showcase the available products to B2B customers.
+        </p>
+        <br/>
+        <h5>Accomplishments</h5>
+        <ul>
+            <li>Green-field implementation of Levi's Digital Showroom app using MVVM and RxSwift</li>
+        </ul>
+        <h5>Responsibilities</h5>
+        <ul>
+            Leading the development of the Swift-based iOS app</li>
+        </ul>
+    </article>
+
+    <article>
+        <header>
+            <h1>Sole iOS Developer</h1>
+            <span><address><a href="https://itunes.apple.com/gb/app/pitchero-club/id590231780?mt=8" target="_blank">Pitchero - Club App</a> - UK (Remote)</address><time>March 2018 to Jan 2019</time></span>
+        </header>
+        <p>The Pitchro app and website are the UK's leading sports team management system, providing everything from marketing and communications to billing and eCommerce.
+            I consulted on and implemented a complete re-design of the existing app UI, and added new features for eCommerce and billing.
+        </p>
+        <br/>
+        <h5>Accomplishments</h5>
+        <ul>
+            <li>Re-immplemented most of the existing app UI using modern Swift and MVVM</li>
+        </ul>
+        <h5>Responsibilities</h5>
+        <ul>
+            <li>Sole developer of the iOS Club application, as well as maintenance of other apps within the Pitchero family</li>
+            <li>Training junior staff</li>
+        </ul>
+    </article>
+
+    <article>
+        <header>
+            <h1>Sole iOS Developer</h1>
             <span><address><a href="https://www.wallstreetenglish.com/" target="_blank">Wall Street English</a> - London, UK</address><time>March 2018 to June 2018</time></span>
         </header>
         <p>Wall Street English are one of the largest providers of English language education for adults Worldwide, with 450 teaching centres in 28 countries. The app provides interactive learning and social features for WSE students, helping them to learn English with the help of their fellow students.
